[style] spacing fix on my jobs table

--- a/themes/Intervue/less/style.less
+++ b/themes/Intervue/less/style.less
@@ -1669,6 +1669,8 @@ table.simpleTable {
     /*border-collapse: collapse;*/
 }
 
+table.simpleTable th { line-height: 16px; }
+
 table.simpleTable td, table.simpleTable th {
     border: none;
     border-bottom: 1px solid @darkBorders;
